--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
 hello, world!
+
+
+
+<script>
+
+
+var span = document.getElementsByClassName("close")[0];
+
+span.onclick = function() {
+  boxcontainer.style.display = "none";
+}
+
+
+	if ('serviceWorker' in navigator) {
+	  window.addEventListener('load', function() {
+	    navigator.serviceWorker.register('sw.js').then(function(registration) {
+	      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+	    }, function(err) {
+	      console.log('ServiceWorker registration failed: ', err);
+	    });
+	  });
+	}
+
+	let deferredPrompt;
+	var div = document.querySelector('.add-to');
+	var button = document.querySelector('.add-to-btn');
+	div.style.display = 'none';
+
+	window.addEventListener('beforeinstallprompt', (e) => {
+	  e.preventDefault();
+	  deferredPrompt = e;
+	  div.style.display = 'block';
+
+	  button.addEventListener('click', (e) => {
+	  div.style.display = 'none';
+	  deferredPrompt.prompt();
+	  deferredPrompt.userChoice
+	    .then((choiceResult) => {
+	      if (choiceResult.outcome === 'accepted') {
+	        console.log('User accepted the A2HS prompt');
+	      } else {
+	        console.log('User dismissed the A2HS prompt');
+	      }
+	      deferredPrompt = null;
+	    });
+	});
+	});
+
+</script>
