--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 	<link rel="manifest" href="manifest.json" />
 
 
-hello, world!
+hello, world! pwa
+
+
+<div id="boxcontainer" class="box-container add-to">
+
+  <div class="inner-box">
+
+
+   <button style="font-size: 15px; padding: 4px 8px; background-color: white; border: none; outline: none;" class="add-to-btn">Add to Home screen</button>
+
+<hr />
+  <div class="close" style="font-size: 14px; padding: 4px 8px;; background-color: #fff;">Cancel</div>
+<br>
+
+
+  </div>
+
+</div>
 
 
 
