--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 	<link rel="manifest" href="manifest.json" />
+<meta content='width=device-width, initial-scale=1' name='viewport'/>
 
 
-hello, world! pwa
+hello, world! 
 
 
 <div id="boxcontainer" class="box-container add-to">
