--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ section { width: 280px; background-color: #fff; border-radius: 15px;}
 
 <section>
 <div style="padding: 28px 22px; text-align: center;">
-<img src="file:///C:/Users/csa-A/Desktop/128x128.png" />
+<img src="icon/128x128.png" />
 <br /> <br />
 
 <p style="color: red;"> fast, easy free app download and installation</p> <br />
@@ -47,7 +47,8 @@ section { width: 280px; background-color: #fff; border-radius: 15px;}
 
 </section
 
-
+	</div>
+	</div>
 
 
 
