--- a/test.amp.html
+++ b/test.amp.html
@@ -7,7 +7,7 @@ MP page by copying and pasting this code:
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="This is the AMP Boilerplate.">
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
-    <link rel="preload" href="hero-img.jpg" as="image">
+    <link rel="preload" href="https://raw.githubusercontent.com/aqwertyin/cbt/main/icon/512x512.png" as="image">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <!-- Import other AMP Extensions here -->
     <style amp-custom>
@@ -51,7 +51,7 @@ MP page by copying and pasting this code:
   </head>
   <body>
     <h1>Hello World</h1>
-    <amp-img src="hero-img.jpg"
+    <amp-img src="https://raw.githubusercontent.com/aqwertyin/cbt/main/icon/512x512.png"
              width="1280" 
              height="720"
              layout="responsive" 
