--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 	<link rel="manifest" href="manifest.json" />
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
 
-
+<section style="border-bottom: 1px solid #ddd; background-color: white;">
+<div class="topnav mw-fixed" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="fn_responsive_nav()"><i class="fas fa-bars"></i></a>
+</div>
+	
+	
 hello, world! 
 
 
