--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 	<link rel="manifest" href="manifest.json" />
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
-
+<link href="style.css" rel="stylesheet" />
 <section style="border-bottom: 1px solid #ddd; background-color: white;">
 <div class="topnav mw-fixed" id="myTopnav">
   <a href="#home" class="active">Home</a>
@@ -19,8 +19,11 @@
   <a href="#about">About</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="fn_responsive_nav()"><i class="fas fa-bars"></i></a>
 </div>
-	
-	
+
+</div>
+</section>
+
+
 hello, world! 
 
 
@@ -145,3 +148,6 @@ span.onclick = function() {
 	});
 
 </script>
+
+	  
+	  <script src="script.js"></script>
