--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ hello, world!
 <style>
 * { margin: 0; box-sizing: border-box; text-decoration: none; font-family: sans-serif; }
 html, body { height: 100%;  }
-.center-container { background-color: #000000ad; 
+.center-container1 { background-color: #000000ad; 
   position: fixed; top: 0; left: 0; right: 0; bottom: 0; }
 
-.center-content {
+.center-content1 {
   margin: 0;
   position: absolute;                                                               
   top: 50%;
