--- a/index.html
+++ b/index.html
@@ -80,4 +80,4 @@ img { width: 100%; }
 </section>
 
 
-<a href="index1.html" style="text-decoration: none;>demo</a>
+<a href="index1.html" style="text-decoration: none;">demo</a>
