--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ img { width: 100%; }
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
    viewBox="0 0 768 576"
-   height="576"
-   width="768"
+   width="100%"
    id="svg10"
    version="1.1">
   <metadata
@@ -840,16 +839,13 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/2Q==
 "
-     preserveAspectRatio="none"
-     height="576"
-     width="768" />
+/>
 </svg>
 </div>
 
 
 <div class="cc">
 
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg
    xmlns:dc="http://purl.org/dc/elements/1.1/"
    xmlns:cc="http://creativecommons.org/ns#"
@@ -858,8 +854,7 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/2Q==
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
    viewBox="0 0 768 576"
-   height="576"
-   width="768"
+   width="100%;"
    id="svg28"
    version="1.1">
   <metadata
@@ -1651,10 +1646,7 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAP/9k=
-"
-     preserveAspectRatio="none"
-     height="576"
-     width="768" />
+"/>
 </svg>
 
 </div>
@@ -1662,3 +1654,4 @@ AAAAAAAAAAAAAAAAAAAAAAAP/9k=
 
 
 <a href="index1.html" style="text-decoration: none;">demo</a>
+ 
